// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remark atom highlights plugin does not blast off when no lang is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": null,
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 26,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"text plain null-grammar\\"><span>//&nbsp;Atom&nbsp;Highlights</span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 26,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin generates highlighted code 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps and fileicons when enabled in inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ codeWrap: true, showFileIcon: true  }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 67,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-icon js-icon medium-yellow'></span><div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 67,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps when codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps when inline codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ codeWrap: true }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 46,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='highlight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 46,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin has codewraps with specific class when codewrapping is enabled 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<div class='midnight'><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre></div>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight code when filename name is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "test.js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 33,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 33,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight code when language name is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "javascript",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 36,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from addition langs from plugin config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 28,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source rust\\"><span class=\\"comment line double-slash rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlights</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 28,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from addition langs when passed in inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{languagePackage: \\"language-rust\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source rust\\"><span class=\\"comment line double-slash rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 61,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from scope when scope is provided and languagePackage is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "html{scopeName:\\"source.hugo\\", languagePackage:\\"language-hugo\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 16,
          "offset": 250,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag sgml html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;!</span></span><span class=\\"meta tag sgml doctype html\\"><span>DOCTYPE</span><span>&nbsp;html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>head</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;</span></span><span class=\\"entity name tag inline any html\\"><span>meta</span></span><span>&nbsp;</span><span class=\\"entity other attribute-name html\\"><span>charset</span></span><span>=</span><span class=\\"string quoted double html\\"><span class=\\"punctuation definition string begin html\\"><span>&quot;</span></span><span>utf-8</span><span class=\\"punctuation definition string end html\\"><span>&quot;</span></span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;</span></span><span class=\\"entity name tag inline any html\\"><span>title</span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span><span>{{&nbsp;block&nbsp;&quot;title&quot;&nbsp;.&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;.Site.Title&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;end&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;/</span></span><span class=\\"entity name tag inline any html\\"><span>title</span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>head</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>body</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;block&nbsp;&quot;main&quot;&nbsp;.&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;end&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>body</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 16,
      "offset": 250,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight codes from scope when scope is provided; it would try to use js even if rs is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{scopeName: \\"source.js\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 51,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 51,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin highlight when inline config is provided in single quote 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: 'source--'}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 52,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source--source source--js\\"><span class=\\"source--comment source--line source--double-slash source--js\\"><span class=\\"source--punctuation source--definition source--comment source--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 52,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin inline scopePrefix 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: \\"source--\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 52,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source--source source--js\\"><span class=\\"source--comment source--line source--double-slash source--js\\"><span class=\\"source--punctuation source--definition source--comment source--js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 52,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin loads grammars from inline config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "rs{languagePackage: \\"language-rust\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 61,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source rust\\"><span class=\\"comment line double-slash rust\\"><span>//</span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 61,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin override scopePrefix from config when inline config is provided 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{scopePrefix: \\"\\"}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 44,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 44,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should highlight line numbers 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "html{scopeName:\\"source.hugo\\", languagePackage:\\"language-hugo\\", highlightLines: (1-2, 5)}",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 16,
          "offset": 276,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"editor editor-colors\\"><div class=\\"line highlighted-line\\"><span class=\\"text html basic\\"><span class=\\"meta tag sgml html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;!</span></span><span class=\\"meta tag sgml doctype html\\"><span>DOCTYPE</span><span>&nbsp;html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line highlighted-line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>head</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;</span></span><span class=\\"entity name tag inline any html\\"><span>meta</span></span><span>&nbsp;</span><span class=\\"entity other attribute-name html\\"><span>charset</span></span><span>=</span><span class=\\"string quoted double html\\"><span class=\\"punctuation definition string begin html\\"><span>&quot;</span></span><span>utf-8</span><span class=\\"punctuation definition string end html\\"><span>&quot;</span></span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span></span></div><div class=\\"line highlighted-line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;</span></span><span class=\\"entity name tag inline any html\\"><span>title</span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span><span>{{&nbsp;block&nbsp;&quot;title&quot;&nbsp;.&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;.Site.Title&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;end&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag inline any html\\"><span class=\\"punctuation definition tag begin html\\"><span>&lt;/</span></span><span class=\\"entity name tag inline any html\\"><span>title</span></span><span class=\\"punctuation definition tag end html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>head</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;</span></span><span class=\\"entity name tag structure any html\\"><span>body</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;block&nbsp;&quot;main&quot;&nbsp;.&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span>{{&nbsp;end&nbsp;}}</span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>body</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div><div class=\\"line\\"><span class=\\"text html basic\\"><span class=\\"meta tag structure any html\\"><span class=\\"punctuation definition tag html\\"><span>&lt;/</span></span><span class=\\"entity name tag structure any html\\"><span>html</span></span><span class=\\"punctuation definition tag html\\"><span>&gt;</span></span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 16,
      "offset": 276,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should replace pre class from config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should replace pre class from inlineconfig 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js{ preClass: { removeClass: true } }",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 76,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 76,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should set custom pre class from config 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<pre class=\\"foo bar\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should show fileicon 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-icon js-icon medium-yellow'></span><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`remark atom highlights plugin should show filename 1`] = `
Object {
  "children": Array [
    Object {
      "lang": "js",
      "position": Position {
        "end": Object {
          "column": 4,
          "line": 3,
          "offset": 41,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "html",
      "value": "<span class='highlighted-file-name'>js</span><pre class=\\"editor editor-colors\\"><div class=\\"line\\"><span class=\\"source js\\"><span class=\\"comment line double-slash js\\"><span class=\\"punctuation definition comment js\\"><span>//</span></span><span>&nbsp;Atom&nbsp;Highlight&nbsp;with&nbsp;fileName</span></span></span></div></pre>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 3,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
